WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133179
REGRESSION (
r155977
): Very stuttery 3D css animation on jtechcommunications.com
https://bugs.webkit.org/show_bug.cgi?id=133179
Summary
REGRESSION (r155977): Very stuttery 3D css animation on jtechcommunications.com
pmilvich
Reported
2014-05-22 08:07:55 PDT
In the nightly build for webkit the 3d portion of the animation on the home page of
http://www.jtechcommunications.com
suffers from bad performance. This animation is nice and smooth in Safari 7.0.3. The animation is using the rekapi library (
http://rekapi.com
) to dynamically create the css animation code and inject it as a style. I suspect it's related to the latest work on the JIT css. Disabling the dynamic css generation and simply setting the values speeds it up on the nightly build, though it is still slower than Safari 7.0.3 w/o the css. (w/o access to the code you can get the non-css generating version by setting the user agent to be chrome - we only had the css version enabled on webkit for safari)
Attachments
Patch
(35.28 KB, patch)
2014-05-22 16:54 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-05-22 11:41:25 PDT
I see WebProcess use a lot of CPU time, and frequently pause (sometimes for a second or so). Regressing this, it looks like <
http://trac.webkit.org/r155977
>.
Simon Fraser (smfr)
Comment 2
2014-05-22 16:54:49 PDT
Created
attachment 231920
[details]
Patch
Tim Horton
Comment 3
2014-05-22 16:56:34 PDT
Comment on
attachment 231920
[details]
Patch Very sad :(
Simon Fraser (smfr)
Comment 4
2014-05-22 16:58:38 PDT
https://trac.webkit.org/r169229
Mark Hahnenberg
Comment 5
2014-05-23 11:06:37 PDT
(In reply to
comment #4
)
>
https://trac.webkit.org/r169229
This appears to have broken the following tests on the WK2 bots: compositing/tiling/rotated-tiled-clamped.html compositing/tiling/rotated-tiled-preserve3d-clamped.html Here are the results:
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK2%20(Tests)/r169229%20(5896)/results.html
Here is the build history that shows it regressed after this revision:
http://build.webkit.org/builders/Apple%20Mavericks%20Release%20WK2%20(Tests)?numbuilds=50
Simon Fraser (smfr)
Comment 6
2014-05-23 11:13:57 PDT
I'll rebaseline those.
Simon Fraser (smfr)
Comment 7
2014-05-23 13:33:18 PDT
https://trac.webkit.org/r169278
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug